<resources>
    <string name="userinfo">Please Enter Your Information</string>
    <string name="username">Name</string>
    <string name="Error_Message">Please Select a Crop First</string>
    <string name="ahs">Annual Harvest Suggestor</string>
    <string name="app_name">AHS</string>
    <string name="Current_Crop">Current Crop:</string>
    <string name="SideCrop">Side Crop:</string>
    <string name="PlantedDate">Planted Date:</string>
    <string name="Expected_Harvest_Date">Expected Harvest Date:</string>
    <string name="main_page">Main Page</string>
    <string name="button_info_field">Add New Field</string>
    <string name="button_info_UI">User Info</string>
    <string name="fertilizer">Fertilizer to Use</string>
    <string name="planting">Planting Procedure</string>
    <string name="Storage">Storage Suggestions</string>
    <string name="fieldname">Field Name</string>
    <string name="Rainques">Click if NO Irrigation is Available</string>
    <string name="save">SAVE</string>
    <string name="userfieldname"></string>
    <string name="title_activity_add_new_field">AddNewField</string>
    <string name="region">Region</string>
    <string name="NOF">No Of Fields</string>
    <string name="Crops_prod">CROPS PLANTED</string>
    <string name="Area">Area Of Land</string>
    <string name="user_info">User Info</string>
    <string name="field_adder">Add New Field</string>
    <string name="DTH">Date Of Harvest:</string>
    <string name="best_crop">Select Best Crop</string>
    <string name="currentsituaation">Current Progress</string>
    <string name="procedure">Crop Suggestion</string>
    <string name="cropgrown">Crop:</string>
    <string name="info">Please Enter The Following Information/ Sync with Device</string>
    <string name="AVGT">Average Temperature(Celcius):</string>
    <string name="AVGS">Total Hours of Sunshine:</string>
    <string name="AVGR">Average Rainfall in mm:</string>
    <string name="AVGPH">PH of Soil:</string>
    <string name="AVGHU">Humidity in Percentage:</string>
    <string name="AVGNI">Nitrogen Content in mm/kg:</string>
    <string name="sync">SYNC</string>
    <string name="chose">Chose Best Crop</string>
    <string name="Croppriority">Set Priority Crop</string>
    <string name="maincrop">Main Crop</string>
    <string name="sidecrop1">Side Crop</string>
    <string name="HintPH">PH</string>
    <string name="HintSunshine">Sunshine</string>
    <string name="HintRain">Rainfall</string>
    <string name="HintTemp">Temperature</string>
    <string name="HintHumidity">Humidity</string>
    <string name="Hintnitro">Nitrogen</string>
    <string name="CF">Confirm Crop</string>
    <string name="nitrogen">Nitogen Information:</string>
    <string name="cropinfo">Best Crops to plant:</string>
    <string name="select">Select Crop</string>
    <string name="confirm">CONFIRM</string>
    <string name="sidecrop">Select side crop</string>
    <string name="sideinfo">Select The Crop You Want To Plant Alongside </string>
    <string name="confirmedcrop">Conf</string>
    <string name="plantedmessage">Crop has already been Selected</string>
    <string name="canclemessage">Click the button below to Cancel current crop and plant a new one</string>
    <string name="cancle">CANCEL</string>
    <string-array name="zones">

        <item>Mechi</item>
        <item>Koshi</item>
        <item>Sagarmatha</item>
        <item>Janakpur</item>
        <item>Narayani</item>
        <item>Bagmati</item>
        <item>Lumbini</item>
        <item>Gandaki</item>
        <item>Dhawalagiri</item>
        <item>Rapti</item>
        <item>Karnali</item>
        <item>Bheri</item>
        <item>Seti</item>
        <item>Mahakali</item>

    </string-array>
    <string-array name="landMeasurementFigures">
        <item>Bigha</item>
        <item>Khatta</item>
        <item>Ropani</item>
        <item>Aana</item>
        <item>Insignificant</item>
    </string-array>


    <string-array name="Crop_names">
        <item>None</item>
        <item>Broccoli</item>
        <item>Cabbage</item>
        <item>Carrots</item>
        <item>Corn</item>
        <item>Cauliflower</item>
        <item>Cucumber</item>
        <item>Garlic</item>
        <item>Lettuce</item>
        <item>LimaBeans</item>
        <item>Onions</item>
        <item>Pea</item>
        <item>Potatoes</item>
        <item>Pumpkin</item>
        <item>Raddish</item>
        <item>Rice</item>
        <item>SoyBean</item>
        <item>Spinach</item>
        <item>Strawberry</item>
        <item>Turnip</item>
        <item>Wheat</item>
    </string-array>
    <string-array name="turnip">
        <item>NONE</item>
        <item>Onions</item>
        <item>Pea</item>
    </string-array>
    <string-array name="Cabbage">
        <item>NONE</item>
        <item>Carrots</item>
        <item>Cucumber</item>
        <item>Onions</item>
        <item>Potatoes</item>
        <item>Spinach</item>
    </string-array>

    <string-array name="Cauliflower">
        <item>NONE</item>
        <item>Carrots</item>
        <item>Cucumber</item>
        <item>Onions</item>
        <item>Potatoes</item>
    </string-array>

    <string-array name="Brocli">
        <item>NONE</item>
        <item>Carrots</item>
        <item>Cucumber</item>
        <item>Garlic</item>
        <item>Potatoes</item>
    </string-array>

    <string-array name="Carrot">
        <item>NONE</item>
        <item>Cabbage</item>
        <item>Onions</item>
        <item>Pea</item>
        <item>Raddish</item>
    </string-array>

    <string-array name="Lettuce">
        <item>NONE</item>
        <item>Carrots</item>
        <item> Cucumber</item>
        <item>Onions</item>
    </string-array>

    <string-array name="Cucumber">
        <item>NONE</item>
        <item>Cabbage</item>
        <item>Carrots</item>
        <item>Corn</item>

        <item>Pea</item>
    </string-array>

    <string-array name="Garlic">
        <item>NONE</item>
    </string-array>

    <string-array name="Spinach">
        <item>NONE</item>
        <item>Cabbage</item>
        <item>Corn</item>
        <item>Raddish</item>
        <item>Pea</item>
        <item>Strawberry</item>
    </string-array>

    <string-array name="Raddish">
        <item>NONE</item>
        <item>Cabbage</item>
        <item>Carrots</item>
        <item>Corn</item>
        <item> Cucumber</item>
        <item>Pea</item>
    </string-array>


    <string-array name="Onions">
        <item>NONE</item>
        <item>Broccoli</item>
        <item>Cabbage</item>
        <item>Carrots</item>
        <item>Cauliflower</item>
        <item>Potatoes</item>
        <item>Spinach</item>
    </string-array>

    <string-array name="Corn">
        <item>NONE</item>
        <item>Cabbage</item>
        <item> Cucumber</item>
        <item>Pea</item>
        <item>Pumpkin</item>
    </string-array>

    <string-array name="Limabeans">
        <item>NONE</item>
        <item> Raddish</item>
    </string-array>


    <string-array name="Rice">
        <item>NONE</item>
    </string-array>

    <string-array name="Wheat">
        <item>NONE</item>
    </string-array>

    <string-array name="SoyBean">
        <item>NONE</item>
        <item>Potatoes</item>
        <item>Cucumber</item>
        <item>Corn</item>
        <item>Strawberry</item>
    </string-array>

    <string-array name="Strawberries">
        <item>NONE</item>
        <item>Onions</item>
        <item>Lettuce</item>
        <item>Pea</item>
    </string-array>

    <string-array name="Peas">
        <item>NONE</item>
        <item>Carrots</item>
        <item>Strawberry</item>
        <item>Turnip</item>
        <item>Cucumber</item>
        <item>Raddish</item>
    </string-array>

    <string-array name="Potatoes">
        <item>NONE</item>
        <item>Cabbage</item>
        <item>Corn</item>
        <item>Pea</item>
    </string-array>

    <string-array name="Pumpkin">
        <item>NONE</item>
        <item>Corn</item>
        <item>Onions</item>
        <item>Raddish</item>
        <item>Pea</item>
        <item>Strawberry</item>
    </string-array>


<string name="information">Information</string>
</resources>
