<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll12">
        <TextView
            android:text="@string/fieldname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:hint="@string/username"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_weight="1"
            android:text="@string/userfieldname"
            android:hapticFeedbackEnabled="true"
            />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll12"
        android:paddingTop="10dp">

        <TextView
            android:text="@string/Area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText1"
            android:labelFor="@+id/editText1" />

        <Spinner
            android:layout_width="108dp"
            android:layout_height="match_parent"
            android:id="@+id/spinner2"
            android:entries="@array/landMeasurementFigures"/>


    </LinearLayout>

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"

        android:background="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_marginTop="167dp"

        android:layout_centerHorizontal="true"
        android:onClick="savefield"/>

</RelativeLayout>