<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_first_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sagar.ahs.FirstLogin"

    >


    <TextView
        android:text="@string/userinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:textColor="#ffff"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginTop="36dp"
        android:id="@+id/spinner"
        android:entries="@array/zones"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center|start"
        android:text="@string/username"
        android:layout_alignTop="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView3" />

    <TextView
        android:text="@string/region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignTop="@+id/spinner"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|textCapWords"
        android:hint="Name"
        android:ems="10"
        android:id="@+id/editText2"
        android:gravity="start|top"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"

        android:hapticFeedbackEnabled="true" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_alignStart="@+id/spinner"
        android:layout_marginStart="49dp"
        android:layout_marginTop="49dp"
        android:id="@+id/button2"
        android:background="@color/colorPrimary"
        android:onClick="click"/>


</RelativeLayout>
