<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_showuserinfo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.sagar.ahs.showuserinfo">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.36">

        <TextView
            android:text="@string/username"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"

            android:textSize="20sp"
            android:paddingStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.36"
        android:paddingTop="20dp">

        <TextView

            android:text="@string/region"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"

            android:paddingStart="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.36"
        android:paddingTop="20dp">

        <TextView
            android:text="@string/NOF"
            android:layout_width="134dp"
            android:layout_height="37dp"
            android:id="@+id/textView12"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView13"

            android:paddingStart="10dp"/>
    </LinearLayout>

    <TextView
        android:text="@string/Crops_prod"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:paddingTop="20dp"
        android:background="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.36"
        android:divider="@color/colorPrimary"
        android:dividerHeight="1dp"
        android:id="@+id/list_view"/>

</LinearLayout>
